# qa-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LOCAL_LLM_LESSONS_LEARNED.md  README.md  fly.toml  page-2026-04-25T13-42-03-713Z.yml  propunere1.md  pyproject.toml  qa-agent-spec.md  run.sh  todo.md  value-proposition
.github/workflows/: db-migrate.yml  fly-deploy.yml
docs/: architecture.md  auth-flow.md  backward-compatibility-rule.md  business-decisions.md  cloud-llms.md  executor-flow.md  growth-module-proposal.md  local-llms.md  marketing-mail-hn.md  persistance.md  playwright-mcp-tools.md  roadmap.md  roles.md  sales-and-marketing.md  secrets-handling.md  timeout-strategy.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: install.sh  purge-user-data.sh  test_scanner_mcp.py
specs/: claude-lessons.md
specs/alconind/: blog.feature  cerere-oferta.feature  contact.feature  despre.feature  gdpr.feature  homepage.feature  produse.feature
specs/alconind-smoke/: config.yaml  smoke.feature
specs/alconind-v2/: blog-articol.feature  blog.feature  cerere-oferta.feature  config.yaml  contact.feature  despre-noi.feature  homepage.feature  produse-profile.feature  produse-tabla.feature  produse-tevi-fara-sudura.feature  produse-tevi-sudate.feature  produse-tevi.feature  produse.feature
specs/german-brawl/: config.yaml  gameplay.feature
src/qa_agent/: __init__.py  agent.py  analyst.py  api.py  auth.py  browserbase.py  cli.py  smoke.py  (+2 more)
supabase/: config.toml
(+92 files in other folders)
